# src/routes/leaderboard.ts
@@ -5,5 +5,6 @@ import * as leaderboardController from '../controllers/leaderboard.controller';
 const router: Router = express.Router();
 
 router.route('/').get(leaderboardController.getLeaderboard);
+router.route('/:id').get(leaderboardController.getLeaderboardById);
 
 export default router;
